[package]
name = "bs-ebpf"
version = "0.1.0"
authors = ["Oskar Matzerath <moskar.drummer@gmail.com>"]
edition = "2018"

[dependencies]
libc                = "0.2"
bs-system          = { version = "0.1", path = "../bs-system" }
byteorder = "1.3"
num-traits = "0.2"
num-derive = "0.3"
syscall = "0.2"
log = "0.4"
