[package]
name = "bs-filter"
version = "0.1.0"
authors = ["Oskar Matzerath <moskar.drummer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpf-sys             = "0.9"
boolean_expression  = "0.3"
eui48               = "0.4"
libc                = "0.2"
modular-bitfield    = "0.6"
cvt                 = "0.1"
