[package]
name = "bs-socket"
version = "0.1.0"
authors = ["Oskar Matzerath <moskar.drummer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bs-filter = { path = "../bs-filter", version = "0.1" }
bs-system = { path = "../bs-system", version = "0.1" }
