[package]
name = "bs-socket"
version = "0.1.0"
authors = ["Oskar Matzerath <moskar.drummer@gmail.com>"]
edition = "2018"

[features]
default = ["bs-filter"]

[dependencies]
libc = "0.2"
bs-filter = { path = "../bs-filter", version = "0.1" , optional = true }
bs-system = { path = "../bs-system", version = "0.1" }
